--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,19 @@ repositories {
 
 dependencies {
 //    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
 //    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 //    runtimeOnly 'com.h2database:h2'
+
+    // spring
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    // etc
+    compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    // swagger(OAS)
+    implementation 'org.springdoc:springdoc-openapi-ui:1.5.2'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
