--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,6 @@ repositories {
 
 dependencies {
 //    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 //    runtimeOnly 'com.h2database:h2'
 
     // spring
@@ -33,6 +32,9 @@ dependencies {
 
     // swagger(OAS)
     implementation 'org.springdoc:springdoc-openapi-ui:1.5.2'
+
+    // devtools
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
