--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### application-*.yml ###
+application-*.yml
+
 ### STS ###
 .apt_generated
 .classpath
