--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,6 @@ repositories {
 }
 
 dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     // spring
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -39,6 +38,8 @@ dependencies {
 
     // db
     implementation 'org.postgresql:postgresql'
+    implementation 'org.hibernate.validator:hibernate-validator:6.0.13.Final'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.h2database:h2'
 
     // test
