--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,23 @@ spring:
   devtools:
     livereload:
       enabled: true
-# H2 ===================================================================================================================
+  jpa:
+    hibernate:
+      ddl-auto: none  # create, create-drop, validate, update, none
+    database: postgresql
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    properties:
+      hibernate:
+        format_sql: true
+    generate-ddl: false # DDL 생성 시 데이터베이스 고유의 기능을 사용하는지에 대한 유무
+    open-in-view: false
+
+  # H2 ===================================================================================================================
   h2:
     console:
       enabled: true
-# DsB(Custom) ===========================================================================================================
+# DB(Custom) ===========================================================================================================
   db:
     datasource:
       # h2는 in-memory로 사용하기 때문에 외부에서 접근이 불가능하여 다른 yml파일을 따로 생성 안하고 그냥 표시
