--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     // devtools
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+    //jwt
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
     // db
     implementation 'org.postgresql:postgresql'
     implementation 'org.hibernate.validator:hibernate-validator:6.0.13.Final'
