Object Mapper(mapstruct) add and test

--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,14 @@ dependencies {
     // spring
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    // etc
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+    // Mapstruct (lombok과 같이 사용할 경우 무조건 lombok보다 일찍 선언해야한다.)
+    implementation 'org.mapstruct:mapstruct:1.4.1.Final'
+    implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+    implementation 'org.projectlombok:lombok:1.18.16'
+
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.1.Final'
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+    annotationProcessor 'org.projectlombok:lombok:1.18.16'
 
     // swagger(OAS)
     implementation 'org.springdoc:springdoc-openapi-ui:1.5.2'
