--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,6 @@ spring:
     hibernate:
       ddl-auto: none  # create, create-drop, validate, update, none
     database: postgresql
-    show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     properties:
       hibernate:
@@ -29,7 +28,7 @@ spring:
     datasource:
       # h2는 in-memory로 사용하기 때문에 외부에서 접근이 불가능하여 다른 yml파일을 따로 생성 안하고 그냥 표시
       h2:
-        url: jdbc:h2:mem:playground
+        url: jdbc:h2:mem:playground;INIT=CREATE SCHEMA IF NOT EXISTS PLAYGROUND;
         driver-class-name: org.h2.Driver
         username: sa
         password:
